Correction version mobile

--- a/braldahim-static/public/css/iphone.css
+++ b/braldahim-static/public/css/iphone.css
@@ -129,3 +129,7 @@ div.liste span, div.titre_liste {
 #menu_actions {
     width: 98%;
 }
+
+#map {
+	right:0px;
+}
